--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-superjson": "^0.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.3.1",
     "stripe": "^8.209.0",
